--- a/shop/index.html
+++ b/shop/index.html
@@ -342,7 +342,7 @@
                       </div>
                       <div id="tab2">
                         <img src="img/2nd-tab.jpg" alt="">
-                        <p>Aliquam eu ultrices risus, sed condimentum diam. Duis risus nulla, elementum vitae nisi a, ornare maximus nisl. Morbi et vehicula est. Cras at vulputate justo. Cras eu nulla metus. Ut et pretium velit. Pellentesque at neque tristique dui tempor venenatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia recusandae natus assumenda saepe! Amet facilis nesciunt, laboriosam iusto atque perferendis!</p>
                       </div>
                       <div id="tab3">
                         <img src="img/3rd-tab.jpg" alt="">
