--- a/shop/index.html
+++ b/shop/index.html
@@ -107,10 +107,11 @@
         <p></p>
     </div> -->
 
-  
+
     <div class="parallax-content projects-content" id="products">
         <div class="product-heading">
             <p>New in store</p>
+            
             <!-- <p style="font-size: 18px;">Presenting the all new sticker collection from velocita.</p> -->
         </div>
        
@@ -239,7 +240,7 @@
     </div> -->
 
     <div class="parallax-content projects-content-two" id="">
-        <div class="product-heading">
+        <div class="product-heading two">
             <p>New Appearals</p>
         </div>
         <div class="container">
@@ -354,7 +355,7 @@
                       </div>
                     </section>
                     <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                      <li><a href="#tab1" class="active">Colab</a></li>
+                      <li><a href="#tab1" class="active">2012 - 2014</a></li>
                       <li><a href="#tab2">2014 - 2016</a></li>
                       <li><a href="#tab3">2016 - 2019</a></li>
                       <li><a href="#tab4">2019 - Now</a></li>
