--- a/shop/index.html
+++ b/shop/index.html
@@ -330,7 +330,7 @@
     <div class="product-heading two" style="padding-top: 70px;">
         <p>News Box</p>
     </div>
-    <p style="text-align: center; font-size: 1.5em; margin-bottom: 50px; width: 90%;">We have run a charity drive for COVID-19 in which</p>
+    <p style="text-align: center; font-size: 1.5em; width: 90%; margin: 0 auto 50px auto;">We have run a charity drive for COVID-19 in which</p>
 
     <div class="container-1" style="min-height: 50vh; padding: 0 0 100px 0; display: flex ; align-items: center; justify-content: center;">
         <div class="row" style="display: flex ; align-items: center; justify-content: center; width: 100%;">
