--- a/shop/index.html
+++ b/shop/index.html
@@ -327,7 +327,7 @@
 
 
    <div style="background-color: #fff; margin-top: 0px;">
-    <div class="product-heading two" style="padding-top: 70px;">
+    <div class="product-heading three" style="padding-top: 70px;">
         <p>News Box</p>
     </div>
     <p style="text-align: center; font-size: 1.5em; width: 90%; margin: 0 auto 50px auto;">We have run a charity drive for COVID-19 in which</p>
