--- a/index.html
+++ b/index.html
@@ -1221,10 +1221,8 @@
     <script src="JS/cars.js"></script>
     <script src="JS/modal.js"></script>
     <script src="JS/backscroll.js"></script>
-    <script src="JS/career.js"></script>
-    <script src="JS/navactive.js"></script>
     <script src="JS/careertoggle.js"></script>
     <script src="JS/ripple.js"></script>
-    <script src="JS/circle-loader.js"></script>
+    <!-- <script src="JS/circle-loader.js"></script> -->
 </body>
 </html>
