--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     on the development of racing grade vehicles for various competitions across India. Our team of highly qualified students is the driving 
     force behind it, each year developing better racing machines, very much in line with the current developments of the automotive industry.">
     <meta name="keywords" content="velocita racing, Velocita, Racing, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
-    <meta name="author" content="Velocita Racing">
+    <meta name="author" content="Soumyadeep">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
        
