--- a/shop/index.html
+++ b/shop/index.html
@@ -140,7 +140,7 @@
                     <div id="owl-testimonials3" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/RACECRAFT.jpg" alt=""></a>
+                                <a href="#" class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/RACECRAFT.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Racecarft Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -155,7 +155,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/MD.jpg" alt=""></a>
+                                <a href="#" class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/MD.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Maintain Safe Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/3rd-big-item.jpg"  class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/HOD.jpg" alt=""></a>
+                                <a href="#"  class="" data-lightbox="image-1"><img src="../IMAGES/SHOP/HOD.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>High Octane Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -197,7 +197,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COME45.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COME45.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>HOD-MSD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -211,7 +211,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>MSD-RC Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -225,7 +225,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COMCOM.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COMCOM.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>RC-MSD-HOD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -268,7 +268,7 @@
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" class="product-open-rc" data-lightbox="image-1"><img src="../IMAGES/SHOP/RACECRAFT.jpg" alt=""></a>
+                                <a href="#" class="product-open-rc" data-lightbox="image-1"><img src="../IMAGES/SHOP/RACECRAFT.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Racecarft Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -283,7 +283,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" class="product-open-msd" data-lightbox="image-1"><img src="../IMAGES/SHOP/MD.jpg" alt=""></a>
+                                <a href="#" class="product-open-msd" data-lightbox="image-1"><img src="../IMAGES/SHOP/MD.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Maintain Safe Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -297,7 +297,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/3rd-big-item.jpg"  class="product-open-hod" data-lightbox="image-1"><img src="../IMAGES/SHOP/HOD.jpg" alt=""></a>
+                                <a href="#"  class="product-open-hod" data-lightbox="image-1"><img src="../IMAGES/SHOP/HOD.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>High Octane Sticker</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -311,7 +311,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>RC-MSD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -325,7 +325,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COME45.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COME45.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>HOD-MSD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -339,7 +339,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>MSD-RC Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -353,7 +353,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COMCOM.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COMCOM.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>RC-MSD-HOD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
@@ -395,7 +395,7 @@
                     <div id="owl-testimonials2" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Awesome Note Book</h4>
                                     <span>$18.00</span>
@@ -404,7 +404,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Antique Decoration Photo</h4>
                                     <span>$27.00</span>
@@ -413,7 +413,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/3rd-big-item.jpg" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Work Hand Bag</h4>
                                     <span>$36.00</span>
@@ -422,7 +422,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Smart Watch</h4>
                                     <span>$45.00</span>
@@ -431,7 +431,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="img/5th-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/5th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>PC Tablet Draw</h4>
                                     <span>$63.00</span>
@@ -440,7 +440,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Healthy Milkshake</h4>
                                     <span>$77.00</span>
@@ -449,7 +449,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Antique Decoration Photo</h4>
                                     <span>$84.50</span>
@@ -458,7 +458,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Awesome Notes Book</h4>
                                     <span>$96.75</span>
@@ -644,8 +644,8 @@
     </footer>
 
 
-    <div class="modal-bg modal-bg-rc">
-        <div class="modal">
+    <div class="modal-bg modal-bg-rc" style="z-index: 10;">
+        <div class="modal" style="z-index: 10;">
             <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
             <img style="height: 200px;" class="product-image" src="../IMAGES/SHOP/RACECRAFT.jpg" alt="">
             <span class="modal-close modal-close-rc">x</span>
@@ -655,8 +655,8 @@
         </div>
     </div>
 
-    <div class="modal-bg modal-bg-msd">
-        <div class="modal">
+    <div class="modal-bg modal-bg-msd" style="z-index: 10;">
+        <div class="modal" style="z-index: 10;">
             <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
             <img style="height: 200px;" class="product-image" src="../IMAGES/SHOP/MD.jpg" alt="">
             <span class="modal-close modal-close-msd">x</span>
@@ -666,8 +666,8 @@
         </div>
     </div>
 
-    <div class="modal-bg modal-bg-hod">
-        <div class="modal">
+    <div class="modal-bg modal-bg-hod" style="z-index: 10;">
+        <div class="modal" style="z-index: 10;">
             <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
             <img style="height: 200px;" class="product-image" src="../IMAGES/SHOP/HOD.jpg" alt="">
             <span class="modal-close modal-close-hod">x</span>
