--- a/shop/index.html
+++ b/shop/index.html
@@ -183,7 +183,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
+                                <a href="#" data-lightbox="image-1"><img src="../IMAGES/SHOP/COM23.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>RC-MSD Combo</h4>
                                     <div style="display: flex; align-items: center; justify-content: space-evenly; margin-top: 10px;">
