--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="about-box">
                 <div class="about">
                     <div class="about-heading">
-                        <p>ABOUT US</p>
+                        <p>About Us</p>
                     </div>
                     <div class="about-content about-left-one">
                             <p>
@@ -200,7 +200,7 @@
 
         <section id="cars">
             <div class="cars-heading">
-                OUR PROJECTS
+                Our Projects
             </div>
             <!-- <div class="cars-box"> -->
                 <!-- <div class="car car1">
@@ -828,7 +828,7 @@
         <section id="sponsors">
 
             <div class="sponsors-heading">
-                <p>OUR SPONSORS</p>
+                <p>Sponsors</p>
             </div>
 
             <div class="sponsor-box">
