--- a/index.html
+++ b/index.html
@@ -63,25 +63,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script> -->
-    <link rel="stylesheet" href="CSS/body.css">
-    <link rel="stylesheet" href="CSS/navbar.css">
-    <link rel="stylesheet" href="CSS/home.css">
-    <link rel="stylesheet" href="CSS/about.css">
-    <link rel="stylesheet" href="CSS/team.css">
-    <link rel="stylesheet" href="CSS/careers.css">
-    <link rel="stylesheet" href="CSS/sponsors.css">
-    <link rel="stylesheet" href="CSS/shop.css">
-    <link rel="stylesheet" href="CSS/contact.css">
-    <link rel="stylesheet" href="CSS/social.css">
-    <link rel="stylesheet" href="CSS/imageslide.css">
-    <link rel="stylesheet" href="CSS/cars.css">
-    <link rel="stylesheet" href="CSS/cars-update.css">
-    <link rel="stylesheet" href="CSS/modal.css">
-    <link rel="stylesheet" href="CSS/team-update.css">
-    <link rel="stylesheet" href="CSS/career-update.css">
-    <link rel="stylesheet" href="CSS/joinus.css">
-    <link rel="stylesheet" href="CSS/back-images.css">
-    <link rel="stylesheet" href="CSS/sponsor-update.css">
+    <link rel="stylesheet" href="CSS/app.css">
 </head>
 <body>
    
