--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     	 "founders": [
             {
             "@type": "Person",
-            "name": "Steven Brills"
+            "name": "Soumyadeep"
             },
             {
             "@type": "Person",
