--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         "sameAs": ["https://facebook.com/velocitaracing",
                    "https://instagram.com/officialvelocitaracing",
                    "https://www.linkedin.com/company/velocita-racing-msrit",
-                   "https://twitter.com/vrvelocita"]
+                   "https://twitter.com/RacingVelocita"]
         }</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Velocita Racing</title>
@@ -1078,7 +1078,7 @@
                             <li><a href="mailto:velocitaracing.rit@gmail.com?Subject=Hey%20Velocita!"><img src="IMAGES/SOCIAL/email.png" alt="email"></a></li>
                             <li><a href="https://www.instagram.com/officialvelocitaracing/" target="_blank"><img src="IMAGES/SOCIAL/instagram.png" alt="instagram"></a></li>
                             <li><a href="https://www.facebook.com/velocitaracing/" target="_blank"><img src="IMAGES/SOCIAL/facebook.png" alt="facbook"></a></li>
-                            <li><a href="https://twitter.com/vrvelocita" target="_blank"><img src="IMAGES/SOCIAL/twitter.png" alt="twitter"></a></li>
+                            <li><a href="https://twitter.com/RacingVelocita" target="_blank"><img src="IMAGES/SOCIAL/twitter.png" alt="twitter"></a></li>
                             <li><a href="https://www.linkedin.com/company/velocita-racing-msrit/" target="_blank"><img src="IMAGES/SOCIAL/linkedin.png" alt="linkedin"></a></li>
                             <li><a href="https://goo.gl/maps/iHcp6HkxJVe88UwGA" target="_blank"><img src="IMAGES/SOCIAL/map.png" alt="map"></a></li>
                         </ul>
