--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="about-box">
                 <div class="about">
                     <div class="about-heading">
-                        <p>About Us</p>
+                        <p>ABOUT US</p>
                     </div>
                     <div class="about-content about-left-one">
                             <p>
@@ -182,7 +182,7 @@
 
         <section id="cars">
             <div class="cars-heading">
-                Our Projects
+                OUR PROJECTS
             </div>
             <!-- <div class="cars-box"> -->
                 <!-- <div class="car car1">
@@ -810,7 +810,7 @@
         <section id="sponsors">
 
             <div class="sponsors-heading">
-                <p>Sponsors</p>
+                <p>SPONSORS</p>
             </div>
 
             <div class="sponsor-box">
