--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     
     <div class="navbar">
-        <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VL logo.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VL white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
+        <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VR new logo.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
         <ul class="nav-links">
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#cars">CARS</a></li>
