--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     
                     <div class="mySlides fade">
                       <div class="numbertext">2 / 3</div>
-                      <img src="IMAGES/SLIDER/VRL.png" alt="Velocita Racing">
+                      <img src="IMAGES/HOME/VR new logo.png" alt="Velocita Racing">
                       <div class="text"></div>
                     </div>
                     
