--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="blog.css">
     <link rel="stylesheet" href="./blog/blog.css">
-    <title>BLOG</title>
+    <title>Page Not Found</title>
 </head>
 <body>
 
