--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
                                     Introducing <span style="font-weight: 600;">Velocita X Narkha&copy;</span>
                                     
                                     <br><br>
-                                    A collection of premium quality appearals designed by the designers of Velocita and Narkha. The awesome design makes it ideal for casual wear, outdoors, and parties.
+                                    A collection of premium quality apparels designed by the designers of Velocita and Narkha. The awesome design makes it ideal for casual wear, outdoors, and parties.
                                     <!-- <br> -->
                                    
                                     <br>Always remember to wear your vibe and #unleashthebeast.
