--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
 
     
     <div class="modal-bg modal-bg-one">
-        <div class="modal modal-one">
+        <div class="modal modal-one modal-recruit-data">
             <h3>Velocita Racing Recruitment 2020</h3>
             <span class="modal-close modal-close-one">x</span>
             <div class="apply-now">
@@ -1146,7 +1146,7 @@
             <h3>Velocita Racing Recruitment 2020</h3>
             <span class="modal-close modal-close-form">x</span>
             <div class="apply-now">
-                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 <iframe class="mobile google-form" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <button class="proceed-btn ripple-btn form-close-btn">Exit</button>
@@ -1160,7 +1160,7 @@
             <h3>Sponsor Query Form</h3>
             <span class="modal-close modal-close-form modal-close-two">x</span>
             <div class="apply-now">
-                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 <iframe class="mobile google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <button class="proceed-btn ripple-btn sponsor-form-close-btn">Exit</button>
@@ -1198,7 +1198,7 @@
         <div class="modal modal-product">
             <h3>Product Query</h3>
             <div class="apply-now">
-                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLSeEh7WCkxA7Q5z97whl50vIOGSFueGB9HbrjDynvgAy5XEiRw/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLSeEh7WCkxA7Q5z97whl50vIOGSFueGB9HbrjDynvgAy5XEiRw/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 <iframe class="mobile google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSeEh7WCkxA7Q5z97whl50vIOGSFueGB9HbrjDynvgAy5XEiRw/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <span class="modal-close modal-close-product">x</span>
