--- a/index.html
+++ b/index.html
@@ -1172,8 +1172,8 @@
     <div class="modal-bg modal-bg-faq">
         <div class="modal modal-faq">
             <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
-            <iframe class="faq-pdf" src="./FAQS.pdf" width="640" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            <iframe class="mobile" src="./FAQS.pdf" width="95%" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe class="faq-pdf laptop" src="./FAQS.pdf" width="640" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe class="faq-pdf mobile" src="./FAQS.pdf" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             <span class="modal-close modal-close-faq">x</span>
             <p class="joinus-modal-text">Didn't find what you were looking for? Get in touch right away!</p>
             <button class="proceed-btn ripple-btn faq-close-button">Exit</button>
@@ -1184,8 +1184,8 @@
     <div class="modal-bg modal-bg-sponsor-faq">
         <div class="modal modal-sponsor-faq">
             <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
-            <iframe class="faq-pdf" src="./FAQS.pdf" width="640" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            <iframe class="mobile" src="./FAQS.pdf" width="95%" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe class="faq-pdf laptop" src="./FAQS.pdf" width="640" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe class="faq-pdf mobile" src="./FAQS.pdf" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             <span class="modal-close modal-close-sponsor-faq">x</span>
             <p class="joinus-modal-text">Didn't find what you were looking for? Get in touch right away!</p>
             <button class="proceed-btn ripple-btn sponsor-faq-close-button">Exit</button>
