--- a/blog2/index.html
+++ b/blog2/index.html
@@ -22,7 +22,7 @@
 			<li><a href="#home">Home</a></li>
 			<li><a href="#featured">Featured</a></li>
 			<li><a href="#explore">Explore</a></li>
-			<li><a href="#founder">Founder's Corner</a></li>
+			<!-- <li><a href="#founder">Founder's Corner</a></li> -->
 			<li><a href="#testimonials">Testimonials</a></li>
 		</ul>
 	</div>
@@ -238,7 +238,7 @@
 	
 
 	<!-- About me -->
-	<section id="founder" class="fh5co-about-me">
+	<!-- <section id="founder" class="fh5co-about-me">
 		<div class="about-me-inner site-container" style="padding-top: 100px;">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
@@ -260,17 +260,17 @@
 						<h4>Steven Bills</h4>
 						<p class="p-white">-Founder Velocita Racing</p>
 					</div>
-					<!-- <div class="about-me-single-slide">
+					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">About me 2</h2>
 						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also CEO of a company, specializing in custom book publishing and social media marketing services, have created a community for authors to learn and connect.He has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
 						<h4>Author</h4>
 						<p class="p-white">See me</p>
-					</div> -->
+					</div> 
 				</div>
 			</div>
 		</div>
 		<div class="about-me-bckg"></div>
-	</section>
+	</section> -->
 	<!-- About me end -->
 
 
