--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,9 @@
 
 
 
-
+    <div class="goto-top">
+        <a class="goto-top-link" href="#home"><button class="goto-top-button"><img class="goto-top-img" src="./IMAGES/goto-top.png" alt="arrow"></button></a>
+    </div>
 
 
     
