--- a/resources/index.html
+++ b/resources/index.html
@@ -1,26 +1,13 @@
-<SCRIPT>
-    function passWord() {
-    var testV = 1;
-    var pass1 = prompt('Please Enter Your Password',' ');
-    while (testV < 3) {
-    if (!pass1)
-    history.go(-1);
-    if (pass1.toLowerCase() == "letmein") {
-    alert('You Got it Right!');
-    window.open('index.html');
-    break;
-    }
-    testV+=1;
-    var pass1 =
-    prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
-    }
-    if (pass1.toLowerCase()!="password" & testV ==3)
-    history.go(-1);
-    return " ";
-    }
-    </SCRIPT>
-    <CENTER>
-    <FORM>
-    <input type="button" value="Enter Protected Area" onClick="passWord()">
-    </FORM>
-    </CENTER>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <title>Document</title>
+</head>
+<body>
+    Welcome to VR Resources
+</body>
+
+    
+</html>    
