--- a/resources/index.html
+++ b/resources/index.html
@@ -20,7 +20,7 @@
       alert('Password Correct! Click OK to enter!');
     else
        {
-        window.location="http://velocitaracing.github.io";
+        window.location="http://velocitaracing.github.io/resources";
         }
     
     //-->
