--- a/resources/index.html
+++ b/resources/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>VR Resources</title>
 </head>
 <body>
     Welcome to VR Resources
