--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,26 @@
                           <img src="IMAGES/SHOP/VelXNar.webp" alt="Velocita Racing X Narkha">
                           <div class="text"></div>
                         </div>
+                        <div class="mySlides-shop fade">
+                            <!-- <div class="numbertext">1 / 3</div> -->
+                            <img src="IMAGES/SHOP/1.webp" alt="Combo Pack">
+                            <!-- <div class="text" style="color: black;"></div> -->
+                        </div>
+                        <div class="mySlides-shop fade">
+                            <!-- <div class="numbertext">1 / 3</div> -->
+                            <img src="IMAGES/SHOP/2.webp" alt="Combo Pack">
+                            <!-- <div class="text" style="color: black;"></div> -->
+                        </div>
+                        <div class="mySlides-shop fade">
+                            <!-- <div class="numbertext">1 / 3</div> -->
+                            <img src="IMAGES/SHOP/3.webp" alt="Combo Pack">
+                            <!-- <div class="text" style="color: black;"></div> -->
+                        </div>
+                        <div class="mySlides-shop fade">
+                            <!-- <div class="numbertext">1 / 3</div> -->
+                            <img src="IMAGES/SHOP/4.webp" alt="Combo Pack">
+                            <!-- <div class="text" style="color: black;"></div> -->
+                        </div>
                         
                         <!-- <div class="mySlides-shop fade">
                           <div class="numbertext">2 / 3</div>
@@ -1075,6 +1095,11 @@
                           <span class="dot-shop"></span>
                           <span class="dot-shop"></span>
                           <span class="dot-shop"></span>
+                          <span class="dot-shop"></span> 
+                          <span class="dot-shop"></span> 
+                          <span class="dot-shop"></span> 
+                          <span class="dot-shop"></span> 
+
                            
                     </div>
 
