--- a/links/index.html
+++ b/links/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <div class="link-buttons">
+    <div class="link-buttons">
         <button>OFFICIAL WEBSITE</button>
         <button>VR BLOG</button>
         <button>SHOP OFFICIAL MERCHANDISE</button>
@@ -16,19 +16,7 @@
         <button>LINKEDIN</button>
         <button>TWITTER</button>
         <button>INSTAGRAM</button>
-    </div> -->
-    -var sites = [
--  'facebook',
--  'twitter',
--  'google',
--  'linkedin',
--  'skype'
--]
-
-.social-btns
-  each site in sites
-    a(href='#', class='btn ' + site)
-      i(class='fa fa-' + site)
+    </div>
 
     
 </body>
