--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
                             <li><a href="https://www.facebook.com/velocitaracing/" target="_blank"><img src="IMAGES/SOCIAL/facebook.png" alt="facbook"></a></li>
                             <li><a href="https://twitter.com/RacingVelocita" target="_blank"><img src="IMAGES/SOCIAL/twitter.png" alt="twitter"></a></li>
                             <li><a href="https://www.linkedin.com/company/velocitaracing" target="_blank"><img src="IMAGES/SOCIAL/linkedin.png" alt="linkedin"></a></li>
-                            <li><a href="https://goo.gl/maps/iHcp6HkxJVe88UwGA" target="_blank"><img src="IMAGES/SOCIAL/map.png" alt="map"></a></li>
+                            <li><a href="https://www.youtube.com/c/velocitaracing" target="_blank"><img src="IMAGES/SOCIAL/yt.png" alt="youtube"></a></li>
                         </ul>
                     </div>
                     <p class="mail">velocitaracing.rit@gmail.com</p>
