--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script> -->
     <link rel="stylesheet" href="CSS/app.css">
+    <link rel="stylesheet" href="./shop/css/fontAwesome.css">
 </head>
 <body>
    
@@ -566,8 +567,8 @@
                         <h5>Team Captain</h5>
                         <p>Innovator! Thats what people call him.</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/head.hoonigan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/pranay-ketineni-839329171/?originalSubdomain=in" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/head.hoonigan/" target="_blank"><i class="team-social-icon-one team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/pranay-ketineni-839329171/?originalSubdomain=in" target="_blank"><i class="team-social-icon-two team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>                        
                        
                     </div>
@@ -585,8 +586,8 @@
                         <h5>Vice Captain</h5>
                         <p>It all began with a thought.</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/olle_huduga_niranjan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/?originalSubdomain=in" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/olle_huduga_niranjan/" target="_blank"><i class="team-social-icon-three team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/?originalSubdomain=in" target="_blank"><i class="team-social-icon-four team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>   
                     </div>
                 </div>
@@ -603,8 +604,8 @@
                         <h5>Team Manager</h5>
                         <p>Managing team since 2018. Ask me anything!</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/bharat_vh/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/bharat-v-hiremath-ab0160176/" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/bharat_vh/" target="_blank"><i class="team-social-icon-five team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/bharat-v-hiremath-ab0160176/" target="_blank"><i class="team-social-icon-six team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>         
                     </div>
                     
@@ -621,8 +622,8 @@
                         <h5>Fabricating Engineer</h5>
                         <p>Making engineering awesome!</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/psychshetty/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/hemanthmshetty439" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/psychshetty/" target="_blank"><i class="team-social-icon-seven team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/hemanthmshetty439" target="_blank"><i class="team-social-icon-eight team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>   
                     </div>
                 </div>
