--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
     on the development of racing grade vehicles for various competitions across India. Our team of highly qualified students is the driving 
     force behind it, each year developing better racing machines, very much in line with the current developments of the automotive industry.">
-    <meta name="keywords" content="velocita racing, Velocita, Racing, Banaglore, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
+    <meta name="keywords" content="velocita racing, Velocita, Racing, Banaglore, velocita website, velocita racing website, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <meta name="author" content="Soumyadeep">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
@@ -63,6 +63,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="canonical" href="https://velocitaracing.github.io/blog/"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script> -->
     <link rel="stylesheet" href="CSS/app.css">
