--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                    "https://www.youtube.com/velocitaracing"]
         }</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Velocita Racing | FSAE Team</title>
+    <title>Velocita Racing | FSAE Team IN</title>
     
 
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
