--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                    "https://www.youtube.com/velocitaracing"]
         }</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Velocita Racing | FSAE Team IN</title>
+    <title>Velocita Racing | FSAE Team | IN</title>
     
-
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
