--- a/links/index.html
+++ b/links/index.html
@@ -12,10 +12,10 @@
     <div class="logo"><img src="../IMAGES/HOME/VR new logo.png" alt="Logo"></div>
     <div class="container">
         <div class="link-buttons">
-            <form  action="https://velocitaracing.github.io">
+            <form  action="../../">
                 <input class="button" type="submit" value="OFFICIAL WEBSITE"/>
             </form>
-            <form  action="https://velocitaracing.github.io/blog">
+            <form  action="../../blog">
                 <input class="button" type="submit" value="VR BLOG" />
             </form>
             <form  action="https://narkha.com/collections/velocita-racing">
