--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
         </div>
         <div class="two">
             <p>Sorry, nothing's Here!</p>
-            <form  action="https://velocitaracing.github.io">
+            <form  action="../">
                 <input class="button ripple-btn" type="submit" value="Take me back" />
             </form>
             <!-- <img class="title" src="./IMAGES/The World of fine Engineering.png" alt=""> -->
