--- a/resources/index.html
+++ b/resources/index.html
@@ -46,6 +46,9 @@
             <li><a href="../../">HOME</a></li>
             <li><a href="../../blog">BLOG</a></li>
             <li><a href="../../#contact">CONTACT</a></li>
+            <div class="version">
+                V 1.2.2
+            </div>
         </ul>
              
         <div class="burger">
